Send user agent with HTTP queries (customisable in the yaml file if needed) + bugfix regarding range references